--- a/pipeline/sandbox.ipynb
+++ b/pipeline/sandbox.ipynb
@@ -25,7 +25,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "id": "7d46f05a-111f-4e42-b061-8669a522600f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (2.2.2)\n",
+      "Collecting pyarrow\n",
+      "  Downloading pyarrow-16.1.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (3.0 kB)\n",
+      "Collecting fastparquet\n",
+      "  Downloading fastparquet-2024.5.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Collecting cramjam>=2.3 (from fastparquet)\n",
+      "  Downloading cramjam-2.8.3-cp312-cp312-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl.metadata (4.2 kB)\n",
+      "Collecting fsspec (from fastparquet)\n",
+      "  Downloading fsspec-2024.6.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: packaging in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from fastparquet) (24.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/Cellar/jupyterlab/4.1.6_1/libexec/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pyarrow-16.1.0-cp312-cp312-macosx_11_0_arm64.whl (26.0 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m26.0/26.0 MB\u001b[0m \u001b[31m50.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading fastparquet-2024.5.0-cp312-cp312-macosx_11_0_arm64.whl (685 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m685.1/685.1 kB\u001b[0m \u001b[31m45.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading cramjam-2.8.3-cp312-cp312-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl (3.6 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.6/3.6 MB\u001b[0m \u001b[31m40.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading fsspec-2024.6.0-py3-none-any.whl (176 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m176.9/176.9 kB\u001b[0m \u001b[31m20.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pyarrow, fsspec, cramjam, fastparquet\n",
+      "Successfully installed cramjam-2.8.3 fastparquet-2024.5.0 fsspec-2024.6.0 pyarrow-16.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas pyarrow fastparquet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "3cbda6ba-f7c9-41a8-94a8-42cdf2a58582",
    "metadata": {},
    "outputs": [],
@@ -34,13 +77,20 @@
     "import tarfile\n",
     "import os\n",
     "import tempfile\n",
-    "import shutil"
+    "import shutil\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6bedba34-0d0e-4774-8d52-a9d242e01f03",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Part 1: Load Data into Memory\n",
     "\n",
@@ -49,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "212fd408-969d-42c3-b671-95f77d5b9e12",
    "metadata": {},
    "outputs": [
@@ -58,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "Extraction completed.\n",
-      "Extracted files are located in: /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmpa_gqky4z\n",
+      "Extracted files are located in: /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmpgtn4b1it\n",
       "Extracted files:\n",
       "\tFootball_teams.parquet\n"
      ]
@@ -101,6 +151,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b486d89-0b4f-49bc-afe7-440058496669",
+   "metadata": {},
+   "source": [
+    "## Load Parquet file into Python Memory\n",
+    "Now that we have unzipped the example data we can read it into python using the parquet modules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b4231d38-51d5-4dac-9273-1ddd738a8c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First few rows of the data:\n",
+      "   ID                Name\n",
+      "0   9  Elinor Satterfield\n",
+      "1   9         Marc Walker\n",
+      "2  81        Kianna Hoppe\n",
+      "3   7        Braulio Wolf\n",
+      "4  60          Chad Towne\n",
+      "\n",
+      "Summary statistics:\n",
+      "                 ID\n",
+      "count  86254.000000\n",
+      "mean      49.976789\n",
+      "std       29.210527\n",
+      "min        0.000000\n",
+      "25%       25.000000\n",
+      "50%       50.000000\n",
+      "75%       75.000000\n",
+      "max      100.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pick a file name you want expect printed from above\n",
+    "# :: EDIT THIS LINE \n",
+    "data_file = \"Football_teams.parquet\"\n",
+    "\n",
+    "# Specify the path to the extracted Parquet file\n",
+    "parquet_file = os.path.join(temp_dir, data_file)\n",
+    "\n",
+    "try:\n",
+    "    # Read the Parquet file into a DataFrame\n",
+    "    df = pd.read_parquet(parquet_file)\n",
+    "    \n",
+    "    # Print the first few rows of the DataFrame\n",
+    "    print(\"First few rows of the data:\")\n",
+    "    print(df.head())\n",
+    "    \n",
+    "    # Print the summary statistics of the DataFrame\n",
+    "    print(\"\\nSummary statistics:\")\n",
+    "    print(df.describe())\n",
+    "    \n",
+    "    # Explore the data further as needed\n",
+    "    # ...\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Parquet file not found: {parquet_file}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading Parquet file: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c74f1b7d-e437-420d-9885-ef6b4a41f1e9",
    "metadata": {},
    "source": [
@@ -110,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "b1aef779-b88e-4d03-a744-547d59009b4a",
    "metadata": {},
    "outputs": [
@@ -118,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temporary directory /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmpa_gqky4z cleaned up.\n"
+      "Temporary directory /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmpgtn4b1it cleaned up.\n"
      ]
     }
    ],
@@ -127,6 +245,14 @@
     "shutil.rmtree(temp_dir)\n",
     "print(f\"Temporary directory {temp_dir} cleaned up.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c5ccd0-73ed-45c5-aa46-1236dc95fd9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
