feat: notebook now runs SQL queries on the data

--- a/pipeline/sandbox.ipynb
+++ b/pipeline/sandbox.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7d46f05a-111f-4e42-b061-8669a522600f",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3cbda6ba-f7c9-41a8-94a8-42cdf2a58582",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,8 @@
     "import os\n",
     "import tempfile\n",
     "import shutil\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sqlite3"
    ]
   },
   {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "212fd408-969d-42c3-b671-95f77d5b9e12",
    "metadata": {},
    "outputs": [
@@ -96,9 +97,11 @@
      "output_type": "stream",
      "text": [
       "Extraction completed.\n",
-      "Extracted files are located in: /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmp33f5n0es\n",
+      "Extracted files are located in: /var/folders/b4/f3v6ww_s0_zcm_srr9ndn7jr0000gn/T/tmpcyc0ud4e\n",
       "Extracted files:\n",
-      "\tFootball_teams.parquet\n"
+      "\tBowling_teams.parquet\n",
+      "\tFootball_teams.parquet\n",
+      "\tBaseball_teams.parquet\n"
      ]
     }
    ],
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6d4d1e6d-c145-4444-b643-b004dc220ae3",
    "metadata": {},
    "outputs": [
@@ -157,23 +160,23 @@
      "output_type": "stream",
      "text": [
       "First few rows of the data:\n",
-      "   ID             Name\n",
-      "0  90    Melisa Harris\n",
-      "1  79     Blake Harvey\n",
-      "2  70   Scarlett Wolff\n",
-      "3  18    Dee Armstrong\n",
-      "4   0  Mabelle Ziemann\n",
+      "   ID                Name  Goals  Rank        Born\n",
+      "0   0     Edmond Schinner     39    79  1970-01-20\n",
+      "1  84       Twila DuBuque    100    23  1970-03-17\n",
+      "2  38  Vida Runolfsdottir     93    53  1970-01-15\n",
+      "3  45        Nathan Hyatt     65    45  1970-04-07\n",
+      "4  65      Green Johnston     79    62  1970-03-26\n",
       "\n",
       "Summary statistics:\n",
-      "                 ID\n",
-      "count  29527.000000\n",
-      "mean      49.904833\n",
-      "std       29.076216\n",
-      "min        0.000000\n",
-      "25%       25.000000\n",
-      "50%       50.000000\n",
-      "75%       75.000000\n",
-      "max      100.000000\n"
+      "                 ID         Goals          Rank\n",
+      "count  37706.000000  37706.000000  37706.000000\n",
+      "mean      50.301225     49.992229     49.980109\n",
+      "std       29.104677     29.161905     29.113241\n",
+      "min        0.000000      0.000000      0.000000\n",
+      "25%       25.000000     25.000000     25.000000\n",
+      "50%       51.000000     50.000000     50.000000\n",
+      "75%       75.000000     75.000000     75.000000\n",
+      "max      100.000000    100.000000    100.000000\n"
      ]
     }
    ],
@@ -181,6 +184,7 @@
     "# Pick a file name you want expect printed from above\n",
     "# :: EDIT THIS LINE \n",
     "data_file = \"Football_teams.parquet\"\n",
+    "table_name = 'Football_teams'\n",
     "\n",
     "# Specify the path to the extracted Parquet file\n",
     "parquet_file = os.path.join(temp_dir, data_file)\n",
@@ -222,6 +226,55 @@
     "# Part 3: Explore Data with `pyspark`\n",
     "\n",
     "There are other data analysis tool instead of pandas and some are better suited for big data such as pyspark which is a python interface for Apache Spark."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "383d97e9-c483-4679-909a-1307e8a33526",
+   "metadata": {},
+   "source": [
+    "# Part 4: Refactor Work into SQL Queries\n",
+    "Now that you have explored the data multiple different ways you can solidify the map-reduce operations into a series of SQL queries that we can deploy in a pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2dd31b48-3bf9-40eb-9e06-c74c556e0e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    ID                Name  Goals  Rank        Born\n",
+      "0    0     Edmond Schinner     39    79  1970-01-20\n",
+      "1   84       Twila DuBuque    100    23  1970-03-17\n",
+      "2   38  Vida Runolfsdottir     93    53  1970-01-15\n",
+      "3   45        Nathan Hyatt     65    45  1970-04-07\n",
+      "4   65      Green Johnston     79    62  1970-03-26\n",
+      "5   14     Kattie Luettgen     13    20  1970-01-20\n",
+      "6  100        Brenda Davis     23    16  1970-04-07\n",
+      "7   39    Valentine Renner     83    11  1970-02-20\n",
+      "8   47      Stephen Harber     19    92  1970-02-01\n",
+      "9   59    Guiseppe Douglas     12    79  1970-03-31\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to an in-memory SQLite database\n",
+    "conn = sqlite3.connect(':memory:')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Load the DataFrame into the SQLite database\n",
+    "df.to_sql(table_name, conn, index=False, if_exists='replace')\n",
+    "\n",
+    "# Execute SQL queries\n",
+    "query = f\"SELECT * FROM {table_name} LIMIT 10;\"\n",
+    "result = pd.read_sql_query(query, conn)\n",
+    "\n",
+    "# Display the result\n",
+    "print(result)"
    ]
   },
   {
