feat: notebook saves sql querys in pipeline.sql

--- a/pipeline/sandbox.ipynb
+++ b/pipeline/sandbox.ipynb
@@ -274,7 +274,51 @@
     "result = pd.read_sql_query(query, conn)\n",
     "\n",
     "# Display the result\n",
-    "print(result)"
+    "print(result)\n",
+    "\n",
+    "# Write lots of query strings and the ones that you like save as python variable to save later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f876c042-d95b-4ef7-a8d1-eb45b4fd8ebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job=1\n",
+    "def remove_leading_whitespace(text):\n",
+    "    lines = text.split('\\n')\n",
+    "    cleaned_lines = [line.lstrip() for line in lines]\n",
+    "    return '\\n'.join(cleaned_lines)\n",
+    "    \n",
+    "def save_query_to_pipeline_file(query, message, job, filename='pipeline.sql'):\n",
+    "    with open(filename, 'a') as file:\n",
+    "        file.write(f\"--<< lernspark(job {job}): {message}\\n\")\n",
+    "        clean_query = remove_leading_whitespace(query.lstrip())\n",
+    "        file.write(clean_query + \"-->>\\n\")\n",
+    "    job += 1\n",
+    "    return job\n",
+    "\n",
+    "# Example usage\n",
+    "query = '''\n",
+    "    INSERT INTO GoalsByCity\n",
+    "    SELECT City, SUM(Goals) AS TotalGoals\n",
+    "    FROM Football_teams\n",
+    "    GROUP BY City\n",
+    "'''\n",
+    "message = \"Aggregate goals by city\"\n",
+    "job = save_query_to_pipeline_file(query, message, job)\n",
+    "\n",
+    "query2 = '''\n",
+    "    INSERT INTO Top5Cities\n",
+    "    SELECT City, TotalGoals\n",
+    "    FROM GoalsByCity\n",
+    "    ORDER BY TotalGoals DESC\n",
+    "    LIMIT 5\n",
+    "'''\n",
+    "message = \"Find top 5 cities with the highest number of goals\"\n",
+    "job = save_query_to_pipeline_file(query, message, job)"
    ]
   },
   {
